<resources>
    <string name="leaderboard_rating_id">CgkI6be96a8eEAIQAg</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>
    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="app_name">ChessYoUp</string>
    <string name="game_title">ChessYoUp</string>
    <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait...</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="dismiss">Dismiss</string>
    <string name="your_score">Your score:</string>
    <string name="error">Error</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="ok_option">OK</string>
    <string name="cancel_option">Cancel</string>
    <string name="close_room_message">Cancel</string>
    <string name="remtach_request_message">Remtach request sended!</string>
    <string name="draw_request_message">Draw request sended!</string>
    <string name="abort_request_message">Remtach request sended!</string>
    <string-array name="action_array">
        <item>Send Game Challenge</item>
        <item>Open Chat</item>
    </string-array>
	<string name="mtm_accept_cert">Accept Unknown Certificate?</string>
	<string name="mtm_decision_always">Always</string>
	<string name="mtm_decision_once">Once</string>
	<string name="mtm_decision_abort">Abort</string>
	<string name="mtm_notification">Certificate Verification</string>
    <string name="engine_threads_default">1</string>
    <string name="engine_hash_default">16</string>
    <string name="moves_per_session_default">60</string>
    <string name="time_control_default">120000</string>
    <string name="time_increment_default">0</string>
    <string name="squareSelectType_default">0</string>
    <string name="font_size_default">12</string>
    <string name="thinking_arrows_default">2</string>
    <string name="scroll_sensitivity_default">2</string>
    <string name="book_line_length_default">1000000</string>
    <string name="viewPieceType_default">1</string>
    <string name="offer_draw">Offer Draw</string>
    <string name="queen">Queen</string>
    <string name="rook">Rook</string>
    <string name="bishop">Bishop</string>
    <string name="knight">Knight</string>
    <string name="promote_pawn_to">Promote pawn to?</string>
    <string name="copy_game">Copy Game to Clipboard</string>
    <string name="copy_position">Copy Position to Clipboard</string>
    <string name="paste">Paste from Clipboard</string>
    <string name="share">Share</string>
    <string name="share_pgn_game">Share PGN game</string>
    <string name="load_game">Load game from PGN file</string>
    <string name="load_scid_game">Load game from Scid file</string>
    <string name="save_game">Save game to PGN file</string>
    <string name="truncate_gametree">Truncate Game Tree</string>
    <string name="move_var_up">Move Variation Up</string>
    <string name="move_var_down">Move Variation Down</string>
    <string name="add_null_move">Add Null Move</string>
    <string name="tools_menu">Tools</string>
    <string name="load_save_menu">Load/Save Game</string>
    <string name="goto_move">Goto move</string>
    <string name="edit_strength">Edit Strength</string>
    <string name="edit_randomization">Edit Randomization</string>
    <string name="invalid_number_format">Invalid number format</string>
    <string name="side_to_move">Side to Move</string>
    <string name="clear_board">Clear Board</string>
    <string name="initial_position">Initial Position</string>
    <string name="castling_flags">Castling Flags</string>
    <string name="en_passant_file">En Passant File</string>
    <string name="move_counters">Move Counters</string>
    <string name="paste_position">Paste Position</string>
    <string name="edit_board">Edit Board</string>
    <string name="select_side_to_move_first">Select side to move first</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="white_square_character">\u25a0</string>
    <string name="black_square_character">\u25a1</string>
    <string name="white_king_castle">White king castle</string>
    <string name="white_queen_castle">White queen castle</string>
    <string name="black_king_castle">Black king castle</string>
    <string name="black_queen_castle">Black queen castle</string>
    <string name="none">None</string>
    <string name="select_en_passant_file">Select En Passant File</string>
    <string name="edit_move_counters">Edit Move Counters</string>
    <string name="internal_book">&lt;Internal Book&gt;</string>
    <string name="select_opening_book_file">Select opening book file</string>
    <string name="select_chess_engine">Select Chess Engine</string>
    <string name="select_pgn_file">Open PGN file</string>
    <string name="select_pgn_file_save">Save to PGN file</string>
    <string name="pgn_load">Load</string>
    <string name="pgn_save">Save</string>
    <string name="reading_pgn_file">Reading PGN file</string>
    <string name="reading_scid_file">Reading Scid file</string>
    <string name="new_file">&lt;New File&gt;</string>
    <string name="new_engine">&lt;New Engine&gt;</string>
    <string name="no_pgn_files">No files found in directory DroidFish/pgn on the SD card</string>
    <string name="no_scid_files">No files found in directory scid on the SD card</string>
    <string name="select_color_theme">Select Color Theme</string>
    <string name="select_game_mode">Select Game Mode</string>
    <string name="edit_replay_game">Edit/re-play Game</string>
    <string name="analysis_mode">Analysis Mode</string>
    <string name="play_white">Play White</string>
    <string name="play_black">Play Black</string>
    <string name="two_players">Two Players</string>
    <string name="comp_vs_comp">Computer vs Computer</string>
    <string name="analysis">Analysis</string>
    <string name="edit_game">Edit Game</string>
    <string name="edit_headers">Edit Headers</string>
    <string name="edit_comments">Edit Comments</string>
    <string name="go_back">Go Back</string>
    <string name="go_forward">Go Forward</string>
    <string name="goto_start_game">Goto Start of Game</string>
    <string name="goto_start_variation">Goto Start of Variation</string>
    <string name="goto_prev_variation">Goto Previous Variation</string>
    <string name="load_prev_game">Load Previous Game</string>
    <string name="goto_end_variation">Goto End of Variation</string>
    <string name="goto_next_variation">Goto Next Variation</string>
    <string name="load_next_game">Load Next Game</string>
    <string name="no_prev_game">No previous game</string>
    <string name="no_next_game">No next game</string>
    <string name="select_action">Select Action</string>
    <string name="flip_board">Flip Board</string>
    <string name="toggle_show_thinking">Toggle Show Thinking</string>
    <string name="toggle_book_hints">Toggle Book Hints</string>
    <string name="toggle_pgn_variations">Toggle Variations</string>
    <string name="toggle_pgn_comments">Toggle Comments</string>
    <string name="toggle_pgn_headers">Toggle Headers</string>
    <string name="toggle_analysis">Toggle Engine Analysis</string>
    <string name="toggle_large_buttons">Toggle Large Buttons</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="move_number">Move number:</string>
    <string name="filename">Filename:</string>
    <string name="halfmove">Halfmove clock:</string>
    <string name="fullmove">Fullmove counter:</string>
    <string name="filter_text">Search…</string>
    <string name="value_percent">Value (%):</string>
    <string name="header_event">Event:</string>
    <string name="header_site">Site:</string>
    <string name="header_date">Date:</string>
    <string name="header_round">Round:</string>
    <string name="comment_before">Before:</string>
    <string name="comment_move">Move:</string>
    <string name="comment_after">After:</string>
    <string name="whites_move">White\'s move</string>
    <string name="blacks_move">Black\'s move</string>
    <string name="ponder">ponder</string>
    <string name="thinking">thinking</string>
    <string name="analyzing">analyzing</string>
    <string name="white_mate">Game over, white mates!</string>
    <string name="black_mate">Game over, black mates!</string>
    <string name="stalemate">Game over, draw by stalemate!</string>
    <string name="draw_rep">Game over, draw by repetition!</string>
    <string name="draw_50">Game over, draw by 50 move rule!</string>
    <string name="draw_no_mate">Game over, draw by impossibility of mate!</string>
    <string name="draw_agree">Game over, draw by agreement!</string>
    <string name="resign_white">Game over, white resigns!</string>
    <string name="resign_black">Game over, black resigns!</string>
    <string name="book">Book:</string>
    <string name="invalid_move">Invalid move</string>
    <string name="piece_can_not_be_moved">Piece can not be moved</string>
    <string name="preferences">Preferences</string>
    <string name="load_game_title">Edit File / Load Game</string>
    <string name="save_game_title">Edit File / Save Game</string>
    <string name="save_game_hint">Select an existing game to control where to save the game. Long press an existing game to delete it.</string>
    <string name="load_scid_game_title">Load Scid Game</string>
    <string name="cpu_warning_title">CPU Warning</string>
    <string name="failed_to_read_pgn_data">Failed to read PGN data</string>
    <string name="variation">Var:</string>
    <string name="add_analysis">Add Analysis</string>
    <string name="fewer_variations">Fewer Variations</string>
    <string name="more_variations">More Variations</string>
    <string name="hide_statistics">Hide statistics</string>
    <string name="show_statistics">Show statistics</string>
    <string name="heavy_cpu_usage">Heavy CPU usage</string>
    <string name="background_processing">Background processing</string>
    <string name="lot_cpu_power">DroidFish is using a lot of CPU power</string>
    <string name="delete">Delete</string>
    <string name="option_rated">Rated game</string>
</resources>